--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,9 @@
             "@components/*": [
                 "./src/components/*"
             ],
+            "@themes/*": [
+                "./src/themes/*"
+            ],
         }
     }
 }
