Add react navigation.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,9 @@
             "@themes/*": [
                 "./src/themes/*"
             ],
+            "@screens/*": [
+                "./src/screens/*"
+            ],
         }
     }
 }
